// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ModalRender — title variations should render without a title 1`] = `
"┌──────────────────────────────────────┐
│                                      │
│ body content                         │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘"
`;

exports[`ModalRender — title variations should render with a title 1`] = `
"┌──────────────────────────────────────┐
│                                      │
│ Command Palette                      │
│ ╭──────────────────────────────────╮ │
│ │ › Type a command...              │ │
│ ╰──────────────────────────────────╯ │
│                                      │
└──────────────────────────────────────┘"
`;

exports[`ModalRender — title variations should render with a long title 1`] = `
"┌──────────────────────────────────────┐
│                                      │
│ A Very Long Modal Title That Could … │
│ body content                         │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘"
`;

exports[`ModalRender — content edge cases should render an empty content body within the border 1`] = `
"┌──────────────────────────────────────┐
│                                      │
│ Empty                                │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘"
`;

exports[`ModalRender — CommandPaletteRender (home view) should render the command palette home view inside a modal 1`] = `
"┌──────────────────────────────────────┐
│                                      │
│ Command Palette                      │
│ ╭──────────────────────────────────╮ │
│ │ › Type a command...              │ │
│ ╰──────────────────────────────────╯ │
│                                      │
└──────────────────────────────────────┘"
`;
